manifests/cluster-addons/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: radarr
spec:
  ports:
    - port: 7878
      targetPort: 7878
